# cache-friendly-segtree

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs
bench/: build.rs  query_point.rs  query_range.rs
src/: friendly.rs  interface.rs  lib.rs  obvlivious.rs
tests/: segtree.rs
tools/: collect_bin_bench_data.py  gen_asm.py  parse_cachegrind.py  plot.py
