[package]
name = "cache-friendly-segtree"
version = "0.1.0"
edition = "2024"

[dependencies]
oorandom = "11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
oorandom = "11"
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bench]]
name = "build"
harness = false
path = "bench/build.rs"

[[bench]]
name = "query_point"
harness = false
path = "bench/query_point.rs"

[[bench]]
name = "query_range"
harness = false
path = "bench/query_range.rs"
